docs: record the Java 24 security-manager landmine and the cache-invalidation rule
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>